--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "truffle-plugin-verify",
+  "name": "@fuchengshun/truffle-plugin-verify",
   "version": "0.5.20",
   "description": "Verify your deployed smart contracts on Etherscan from the Truffle CLI",
-  "repository": "https://github.com/rkalis/truffle-plugin-verify",
+  "repository": "https://github.com/fuchengshun/truffle-plugin-verify",
   "main": "verify.js",
   "files": [
     "constants.js",
